 syntax = "proto3";
// proto/user.proto

syntax = "proto3";

package user;

service UserService {
    // db Service : 
    rpc RegisterUser (RegisterRequestDB)                        returns (UserRegisterResponseDB);
    rpc LoginUser (LoginRequestDB)                              returns (UserLoginResponseDB);
    rpc StoreSessionDataToDB (StoreSessionDataToDbRequest)      returns (StoreSessionDataToDbResponse);
    rpc CheckSessionValidInDb (CheckSessionValidInDbRequest)    returns (CheckSessionValidInDbResponse)
    rpc IsEmailExistsInDb (IsEmailExistsInDbRequest)            returns (IsEmailExistsInDbResponse)
    
       
    // redis Service : 
    rpc StoreSessionToRedis (StoreSessionToRedisRequest) returns (StoreSessionToRedisResponse);
    rpc CheckSessionInRedis (CheckSessionInRedisRequest) returns (CheckSessionInRedisResponse);
   
}
 
 
IsEmailExistsInDbRequest{
  string userEmail = 1 ; 
}

IsEmailExistsInDbResponse{
  bool sucess = 1 ;
  message = 2 ; 
}
 
 
